<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 MyMenu, Inc.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see [http://www.gnu.org/licenses/].
  -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="20dp"
      android:gravity="center">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="60sp"/>

    <TextView
        android:id="@+id/settings_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/given_name"/>

    <EditText
        android:id="@+id/settings_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_firstname"/>

    <EditText
        android:id="@+id/settings_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_lastname"/>

    <EditText
        android:id="@+id/settings_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/settings_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/settings_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:layout_width="0dp"
          android:layout_weight="1"
          android:layout_height="wrap_content"
          android:text="@string/locality"/>

      <Spinner
          android:id="@+id/settings_locality"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/settings_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_save"/>

  </LinearLayout>

</ScrollView>

