<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 MyMenu, Inc.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see [http://www.gnu.org/licenses/].
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item android:showAsAction="always"
      android:icon="@drawable/ic_action_filter"
      android:title="@string/sort">
    <menu>
      <group android:id="@+id/specials_filter"
          android:checkableBehavior="all">
        <item android:id="@+id/specials_filter_drinks"
            android:title="@string/filter_drinks"/>
        <item android:id="@+id/specials_filter_entrees"
            android:title="@string/filter_entrees"/>
        <item android:id="@+id/specials_filter_desserts"
            android:title="@string/filter_desserts"/>
      </group>
    </menu>
  </item>

</menu>